5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1712_2502.log
== TEST (2019-05-14 22:53:10) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- ERROR:
File "XXXX", line 8
    acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
                                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:53:21) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- ERROR:
File "XXXX", line 8
    acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
                                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:53:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- EXECUTION TIME:
0.135958
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 8
    acum = acum * ((1 / (1 * (3 ** (cont -\xa01)) * s)
                                           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:53:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- EXECUTION TIME:
0.192142
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 8
    acum = acum * ((1 / (1 * (3 ** (cont -\xa01)) * s)
                                           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:53:51) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- EXECUTION TIME:
0.105186
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 8
    acum = acum * ((1 / (1 * (3 ** (cont -\xa01)) * s)
                                           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:53:51) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- EXECUTION TIME:
0.152723
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 8
    acum = acum * ((1 / (1 * (3 ** (cont -\xa01)) * s)
                                           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:53:51) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- EXECUTION TIME:
0.242686
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 8
    acum = acum * ((1 / (1 * (3 ** (cont -\xa01)) * s)
                                           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:53:52) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- EXECUTION TIME:
0.407919
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:53:52) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- EXECUTION TIME:
0.341992
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 8
    acum = acum * ((1 / (1 * (3 ** (cont -\xa01)) * s)
                                           ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:53:52) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- ERROR:
File "XXXX", line 8
    acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
                                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:54:07) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- ERROR:
File "XXXX", line 9
    s =  s * (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:54:17) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- ERROR:
File "XXXX", line 9
    s =  s * (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:54:19) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- EXECUTION TIME:
0.15275
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 9
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:54:19) 
-- CODE:
n = int(input("numero de termos:"))

acum = sqtr(12)
cont = 0
s = 1

while( cont < t):
	acum = acum * ((1 / (1 * (3 ** (cont - 1)) * s)
	s =  s * (-1)
	cont = cont +1
print (round(acum , 8))
-- ERROR:
File "XXXX", line 9
    s =  s * (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:00:28) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + (12 **(1/2)* (((b / 1 * (3 ** a)) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
print (round(acum , 8))
-- ERROR:
File "XXXX", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:00:42) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + (12 **(1/2)* (((b / 1 * (3 ** a)) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
print (round(acum , 8))
-- ERROR:
File "XXXX", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:00:43) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + (12 **(1/2)* (((b / 1 * (3 ** a)) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
print (round(acum , 8))
-- EXECUTION TIME:
0.148607
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:00:44) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + (12 **(1/2)* (((b / 1 * (3 ** a)) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
print (round(acum , 8))
-- EXECUTION TIME:
0.169956
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:00:45) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + (12 **(1/2)* (((b / 1 * (3 ** a)) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
print (round(acum , 8))
-- EXECUTION TIME:
0.192034
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:00:45) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + (12 **(1/2)* (((b / 1 * (3 ** a)) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
print (round(acum , 8))
-- EXECUTION TIME:
0.143318
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:00:45) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + (12 **(1/2)* (((b / 1 * (3 ** a)) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
print (round(acum , 8))
-- EXECUTION TIME:
0.228658
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:02:15) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
						pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:17) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
						pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.198534
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:18) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
						pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.177676
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:18) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
						pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.141253
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:19) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
						pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.114174
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:19) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
						pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.22056
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:19) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
						pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.229052
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:24) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.130225
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:02:26) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	s =  s * (-1)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    s =  s * (-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:02:36) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:37) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.137316
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:39) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.2202
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:40) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.191803
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:40) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.32132
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:41) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.242641
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:41) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.178874
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:41) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.500593
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:41) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.502342
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:41) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.460721
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:02:41) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
	acum = acum + ((1 / b * (3 ** a) * s)
	a = a + 1
	b = b + 2
	cont = cont + 1
	pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.371109
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:48) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:49) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:03:50) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:51) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.166411
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:52) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.118443
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.166724
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.433266
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.420266
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.611327
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.852405
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.900856
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.884195
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.929094
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:54) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.334517
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:54) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.283181
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:03:54) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.279413
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:06:12) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 00:06:14) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 / b * (3 ** a) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.187209
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:50:03) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 /(b * (3 ** a)) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:50:06) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while( cont < n):
		acum = acum + ((1 /(b * (3 ** a)) * s)
		a = a + 1
		s = s * (-1)
		b = b + 2
		cont = cont + 1
		pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.156592
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 10
    a = a + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:52:12) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + ((1 /(b * (3 ** a)) * s)
	b = b + 2
	a = a + 1
	s = s * (-1)
pi = acum * (12 *(1/2))
print (round(pi , 8))
-- ERROR:
File "XXXX", line 11
    b = b + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:52:15) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0
cont = 0
s = 1
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + ((1 /(b * (3 ** a)) * s)
	b = b + 2
	a = a + 1
	s = s * (-1)
pi = acum * (12 *(1/2))
print (round(pi , 8))
-- EXECUTION TIME:
0.149072
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 11
    b = b + 2
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:08:00) 
-- CODE:
from math impot*
n = int(input("numero de termos:"))

acum = 0
cont = 0
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + (1 /(b * (3 ** a)) 
	b = b + 2
	a = a + 1
	if(acum == 1):
		acum = -1
	else:
		acum = 1
   cont = cont + 1
	b = b + 2
						
acum = acum * sqrt(12)

print (round( acum, 8))
-- ERROR:
File "XXXX", line 1
    from math impot*
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:08:01) 
-- CODE:
from math impot*
n = int(input("numero de termos:"))

acum = 0
cont = 0
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + (1 /(b * (3 ** a)) 
	b = b + 2
	a = a + 1
	if(acum == 1):
		acum = -1
	else:
		acum = 1
   cont = cont + 1
	b = b + 2
						
acum = acum * sqrt(12)

print (round( acum, 8))
-- EXECUTION TIME:
0.168278
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 1
    from math impot*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:08:03) 
-- CODE:
from math impot*
n = int(input("numero de termos:"))

acum = 0
cont = 0
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + (1 /(b * (3 ** a)) 
	b = b + 2
	a = a + 1
	if(acum == 1):
		acum = -1
	else:
		acum = 1
   cont = cont + 1
	b = b + 2
						
acum = acum * sqrt(12)

print (round( acum, 8))
-- EXECUTION TIME:
0.174878
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 1
    from math impot*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:08:03) 
-- CODE:
from math impot*
n = int(input("numero de termos:"))

acum = 0
cont = 0
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + (1 /(b * (3 ** a)) 
	b = b + 2
	a = a + 1
	if(acum == 1):
		acum = -1
	else:
		acum = 1
   cont = cont + 1
	b = b + 2
						
acum = acum * sqrt(12)

print (round( acum, 8))
-- ERROR:
File "XXXX", line 1
    from math impot*
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:08:03) 
-- CODE:
from math impot*
n = int(input("numero de termos:"))

acum = 0
cont = 0
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + (1 /(b * (3 ** a)) 
	b = b + 2
	a = a + 1
	if(acum == 1):
		acum = -1
	else:
		acum = 1
   cont = cont + 1
	b = b + 2
						
acum = acum * sqrt(12)

print (round( acum, 8))
-- EXECUTION TIME:
0.107897
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 1
    from math impot*
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:08:03) 
-- CODE:
from math impot*
n = int(input("numero de termos:"))

acum = 0
cont = 0
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + (1 /(b * (3 ** a)) 
	b = b + 2
	a = a + 1
	if(acum == 1):
		acum = -1
	else:
		acum = 1
   cont = cont + 1
	b = b + 2
						
acum = acum * sqrt(12)

print (round( acum, 8))
-- ERROR:
File "XXXX", line 1
    from math impot*
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:08:03) 
-- CODE:
from math impot*
n = int(input("numero de termos:"))

acum = 0
cont = 0
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + (1 /(b * (3 ** a)) 
	b = b + 2
	a = a + 1
	if(acum == 1):
		acum = -1
	else:
		acum = 1
   cont = cont + 1
	b = b + 2
						
acum = acum * sqrt(12)

print (round( acum, 8))
-- EXECUTION TIME:
0.203157
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:08:03) 
-- CODE:
from math impot*
n = int(input("numero de termos:"))

acum = 0
cont = 0
a = 0
b = 1
while(cont < n):
	cont = cont + 1
	acum = acum + (1 /(b * (3 ** a)) 
	b = b + 2
	a = a + 1
	if(acum == 1):
		acum = -1
	else:
		acum = 1
   cont = cont + 1
	b = b + 2
						
acum = acum * sqrt(12)

print (round( acum, 8))
-- ERROR:
File "XXXX", line 1
    from math impot*
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:11:28) 
-- CODE:
from math import*

n = int(input())

c = 0 # contador para percorrer o laco
d = 1 # denominador
e = 0 # soma inicializada com zero
aux = 1 # variavel auxiliar varia entre -1 e 1

while(c < n):
	e = e + (aux * (1 / (d * (3 ** c))))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
	c = c + 1
	d = d + 2
	
e = e * sqrt(12)
print(round(e, 8))
-- EXECUTION TIME:
0.186308
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
